# matam_ex2

./: .gitignore  README.md
Dry/: CMakeLists.txt  dry.cpp  dry_test.cpp
Wet/: CMakeLists.txt  Citizen.cpp  Citizen.h  Employee.cpp  Employee.h  Faculty.cpp  Faculty.h  Manager.cpp  Manager.h  Skill.cpp  Skill.h  Skill_Test_Main.cpp  WorkPlace.cpp  WorkPlace.h  Workplace.cpp  Workplace.h  city_test.cpp  exceptions.cpp  exceptions.h  solution.h
Wet/tests/: employee_test.cpp  manager_test.cpp  skill_test.cpp  workplace_test.cpp
